[package]
name = "github-pr-summary"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/github-pr-summary.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
github-flows = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
flowsnet-platform-sdk = "0.1"
lazy_static = "1.4.0"
regex = "1.7.1"
openai-flows = "0.8.2"
words-count = "0.1.4"
log = "0.4"
